--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-mkx-storage": "^1.1.8",
     "react-mkx-toolkit": "^1.8.0",
     "react-router-dom": "^6.26.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "yup": "^1.4.0"
   },
   "scripts": {
@@ -46,6 +46,15 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-class-properties": "^7.25.4",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.24.7",
+    "@babel/plugin-transform-numeric-separator": "^7.24.7",
+    "@babel/plugin-transform-optional-chaining": "^7.24.8",
+    "@babel/plugin-transform-private-methods": "^7.25.4",
+    "@eslint/config-array": "^0.18.0",
+    "@eslint/object-schema": "^2.1.4",
+    "@rollup/plugin-terser": "^0.4.4",
+    "rimraf": "^4.4.1",
     "tailwindcss": "^3.4.10"
   }
 }
